Fix bugs. 1. Added Right arrow 2. Android 10 thumbnail are visible now. 3. Orientation app crash fixed 4. Hard coded values move to res file

--- a/app/src/main/res/layout/testdemo_raw.xml
+++ b/app/src/main/res/layout/testdemo_raw.xml
@@ -15,10 +15,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="5dp"
+            android:paddingStart="@dimen/card_start_padding"
+            android:paddingTop="@dimen/card_top_padding"
+            android:paddingEnd="@dimen/card_ending_padding"
+            android:paddingBottom="@dimen/card_bottom_padding"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -46,10 +46,18 @@
             </LinearLayout>
 
             <ImageView
-                android:layout_width="130dp"
+                android:layout_width="@dimen/image_width"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
                 android:id="@+id/image_test"
+                />
+            <ImageView
+                android:layout_width="@dimen/right_arrow_width"
+                android:layout_height="@dimen/right_arrow_height"
+                android:scaleType="fitXY"
+                android:src="@drawable/right"
+                android:layout_gravity="center"
+                android:id="@+id/image_right"
                 />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
