--- a/app/src/main/res/layout/content_assignment.xml
+++ b/app/src/main/res/layout/content_assignment.xml
@@ -6,21 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingStart="@dimen/start_padding"
-    android:paddingTop="@dimen/top_padding"
-    android:paddingEnd="@dimen/end_padding"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".AssignmentActivity"
     tools:showIn="@layout/activity_assignment">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_layout"
+    <fragment
+        android:name="com.example.assignment.AssignmentFragment"
+        android:id="@+id/title_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        android:layout_height="match_parent"
+       />
 </LinearLayout>
